tests/specs/ecosystem/fluentci/sdk/0_1_0.test
fluentci/sdk/0.1.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/client.gen.ts:41:7
   | 
41 |   get queryTree() {
   |       ^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
    --> /src/client.gen.ts:1281:14
     | 
1281 | export const dag = new Client({ ctx: defaultContext });
     |              ^^^ this symbol is missing an explicit type
     | 
     = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/context.ts:53:14
   | 
53 | export const defaultContext = new Context();
   |              ^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


